# mddocs

./: .gitignore  Makefile  README.md  mddocs.yml  pyproject.toml
docs-md/docs/reference/: index.md  sidebar.json
docs-md/docs/reference/mddocs/: gen_index_md_table.md  mddocs.md
src/mddocs/: __init__.py  __main__.py  gen_index_md_table.py  mddocs.py
