[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mddocs"
version = "0.0.0"
description = "Markdown Documentation generator for python projects."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Mirek Forczek", email = "mirekforczek@poczta.onet.pl" } ]
dependencies = [
  "pydoc-markdown>=4.8.2"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",

  "Topic :: Utilities", # CLI-first tool
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: Markdown",  

  "Typing :: Typed"  
]

[project.urls]
Homepage = "https://github.com/mirekfoo/mddocs"
Repository = "https://github.com/mirekfoo/mddocs"
Changelog = "https://github.com/mirekfoo/mddocs/releases"


[project.optional-dependencies]
dev = [
  "bumpver"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mddocs" = ["py.typed"]

[tool.bumpver]
current_version = "0.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version: {old_version} → {new_version}"
tag_message = "v{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"src/mddocs/__init__.py" = ['__version__ = "{version}"']
